--- a/app.json
+++ b/app.json
@@ -1,5 +1,15 @@
 {
   "expo": {
-    "sdkVersion": "22.0.0"
+    "name":"Friend-Space",
+    "icon": "./images/appicon.png",
+    "sdkVersion": "22.0.0",
+    "version": "1.0.0",
+    "slug": "friend-space",
+    "ios": {
+      "bundleIdentifier": "com.xuying.friendspace"
+    },
+    "android": {
+      "package": "com.xuying.friendspace"
+    }
   }
 }
