--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo": "^22.0.2",
     "pubsub-js": "^1.5.7",
     "react": "16.0.0-beta.5",
-    "react-native": "^0.49.5",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.0.tar.gz",
     "react-navigation": "^1.0.0-beta.21"
   }
 }
